Header and main-home

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,17 +17,45 @@
     <link rel="stylesheet" href="style.css">
     <script src="app.js" defer></script>
     <title>Drkhippo&#39;s Portfolio</title>
-
 </head>
-
 <body>
+    <!--  -->
+    <header>
+        <div>
+            <img src="images/favicon.ico" alt="로고">
+            <h1><a href="#">Hippo</a></h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#work">My work</a></li>
+                <li><a href="#testimonial">Testimoial</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <!--  -->
+    <main>
+        <section id="home">
+            <img src="images/Profile2.png" alt="대표 이미지">
+            <h2>Hello I&#39;m Hippo</h2>
+            <p>A software engineer currently residing in Ma-gae, South Korea</p>
+            <a href="#contact">Contact ME!</a>
+        </section>
+        <section id="about"></section>
+        <section id="skills"></section>
+        <section id="work"></section>
+        <section id="testimoial"></section>
 
+        <!-- 화살표 -->
+        <aside></aside>
+    </main>
 
-
-
-
-    <script src="app.js"></script>
+    <!--  -->
+    <footer id="contact"></footer>
 </body>
 
 </html>
